[gd_scene load_steps=2 format=3 uid="uid://v2axihhn2vb"]

[ext_resource type="Script" path="res://window_default_setting.gd" id="1_7crob"]

[node name="WindowDefaultSetting" type="Window"]
title = "一般設定"
initial_position = 1
size = Vector2i(640, 480)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_7crob")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "畫布背景顏色"

[node name="ColorPickerButton" type="ColorPickerButton" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "text"
color = Color(0.992157, 0.960784, 0.901961, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "畫布像素大小"

[node name="SpinBoxBlockSize" type="SpinBox" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 30.0
allow_greater = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "幫助:"

[node name="Label2" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "1 使用快捷鍵 ctrl+滑鼠滾輪 更改畫布像素大小"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
